fixed some alignings

--- a/css/stylesPizza.css
+++ b/css/stylesPizza.css
@@ -156,6 +156,7 @@ footer {
 .pizzaImg {
     max-width: 100%;
     height: auto;
+    object-fit: cover;
     border-radius: 14px;
     margin-bottom: 0.5rem;
     border: 1px solid #ddd;
@@ -177,9 +178,13 @@ ul {
     list-style-type: none;
 }
 
+#ingredients-pizza {
+    align-self: flex-start;
+    padding-left: 1.5rem;
+    font-size: 1.2rem;
+}
+
 #instructions-pizza {
-    display: flex;
-    flex-direction: column;
     align-items: flex-start;
     padding-left: 1.5rem;
 }
@@ -200,30 +205,35 @@ ul {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+.txtRating {
+    align-self: center;
 }
 
 #rating-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-self: center;
 }
 
 #rating-form label {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    align-self: center;
 }
 
 #rating-form input {
     width: 60px;
-    padding: 5px;
+    padding: 0.1rem;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    align-self: center;
 }
 
 #rating-form button {
-    background-color: #457b9d;
-    color: #fff;
+    background-color: green;
+    color: white;
     border: none;
     padding: 0.5rem 1rem;
     font-size: 1.2rem;
@@ -233,7 +243,7 @@ ul {
 }
 
 #rating-form button:hover {
-    background-color: #1d3557;
+    background-color: darkgreen;
 }
 
 @media (min-width: 768px) {
@@ -260,6 +270,10 @@ ul {
     #rating-form {
         align-items: flex-start;
     }
+
+    .menuButton {
+        display: none;
+    }
 }
 
 @media (max-width: 576px) {
@@ -270,6 +284,14 @@ ul {
 
     .menuButton {
         display: block;
+    }
+
+    .container {
+        padding: 0.5rem;
+    }
+
+    .description {
+        font-size: 1rem;
     }
 }
 
@@ -285,11 +307,5 @@ ul {
     header {
         display: flex;
         justify-content: space-between;
-    }
-}
-
-@media (min-width: 768px) {
-    .menuButton {
-        display: none;
     }
 }
